# othello-ai

./: .dev.env  .flake8  .gitignore  .gitmodules  .pylintrc  README.md  pyproject.toml  test.py
othello/: __init__.py  __main__.py  ai.py  bitboard.py  game.py  player.py  ui.py
othello-pyext/: CMakeLists.txt  clean.sh  main.cpp  pyproject.toml  setup.py
othello-pyext/othello-cpp/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
othello-pyext/othello-cpp/project/: CMakeLists.txt
othello-pyext/othello-cpp/project/ai-max/: CMakeLists.txt  aimax.cpp  aimax.h  aimax_test.cpp
othello-pyext/othello-cpp/project/board/: CMakeLists.txt  bit_board.cpp  bit_board.h  bit_board_test.cpp  board.cpp  board.h  board_test.cpp  vec2.h
othelloai/: __init__.py  __main__.py  ai.py  args.py  bitboard.py  board.py  color.py  exception.py  game.py  main.py  player.py  ui.py
othelloai/ai/: __init__.py  minmax.py  minmax_cpp.py  random.py
othelloai/gui/: __init__.py  player.py
tests/: test_aimax_cpp.py  test_bitboard.py  test_board.py  test_board_cpp.py  test_game.py
training/: __main__.py  environment.py  network.py
