[tool.poetry]
name = "othello-ai"
packages = [
    {include = "othelloai"}
]
version = "0.1.1"
description = "Othello game engine"
authors = ["Jason R. Carrete <jasoncarrete5@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jcarrete5/othello-ai"
keywords = ["othello", "ai"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
flake8 = "^3.9.0"
isort = "^5.8.0"
black = "^20.8b1"

[tool.poetry.scripts]
othello = "othelloai.main:start_ui"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
