[tool.poetry]
name = "othello-ai"
packages = [
    {include = "othelloai"}
]
version = "0.1.1"
description = "Othello game engine"
authors = ["Jason Carrete <jasoncarrete5@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/jcarrete5/othello-ai"
keywords = ["othello", "ai"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = {version = "^1.22.2", optional = true}
tensorflow = "^2.8.0"
tf-agents = {version = "^0.12.0", optional = true, extras = ["reverb"]}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
isort = "^5.8.0"
black = "^22.1.0"
coverage = "^6.3.2"

[tool.poetry.extras]
mldev = ["tf-agents", "numpy", "dm-reverb"]

[tool.poetry.scripts]
othello = "othelloai.main:start_gui"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
